[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskcask-ssh"
version = "0.0.1"
authors = [
  { name="Ignytis", email="155588001+ignytis@users.noreply.github.com" },
]
description = "A SSH module for TaskCask"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "fabric>=3.2.2,<4.0.0",
  "taskcask-common<1.0.0",
]

[project.entry-points."taskcask.autoloaders"]
ssh = "taskcask_ssh.autoloader"

[project.urls]
Homepage = "https://github.com/ignytis/taskcask-ssh"

[tool.hatch.build]
only-packages = true
